src/test/errors/loopInvariantEntryErr.hhl
/*
    A simple test case for errors caused by a loops invariant which may not hold at entry point.
    Output:
        Verification failed
        [WhileLoop] The following loop invariant might not hold at entry point:
        forall <_s: State> :: ((!(<_s>)) || (false))
        Metadata:
        - LoopRule: syncRule
        - QuantifiersRemoved: 0
*/

method loopInvariantEntryErr() returns (out: Int)
    requires forall <_s> :: true
    ensures forall <_s> :: _s[out] == 2
{
    var i: Int
    i := 0

    while (i < 1)
        invariant forall <_s> :: false
    {
        i := i + 1
    }

    out := 2
}

